--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@saithodev/ts-appversion",
-  "version": "1.3.0",
+  "name": "@sharmanikhil04/ts-appversion",
+  "version": "1.4.0",
   "description": "Reads the version from your packages.json and saves it in a .ts file you can include into your application.",
   "main": "dist/index.js",
   "bin": {
